[plantuml, png]
----
@startuml architecture

interface IThread
{
    +Execute(): void
}

class MeasurementTask
{
    +Execute(): void override
}

class UsartTask
{
    +Execute(): void override
}

interface IDigitalFilter
{
    FilterValue(value: float): float
}

class DigitalFilter
{
    -oldValue: float
    -tau: const float
    -dt: const float
    -RC: const float
    +FilterValue(value: float): float override
}

interface ILedController
{
    +Indicate(ledAmount: uint8_t): void
}

class LedController
{
    +Indicate(ledAmount: uint8_t): void override
}

interface ILedCalculator
{
    -maxLedAmount: const uint8_t
    -vRef: float
    +Calculate(filteredVoltage: float): uint8_t
}

class LedCalculator
{
    -maxLedAmount: const uint8_t
    +Calculate(maxLedAmount: const uint8_t, filteredVoltage: float, vRef: float): uint8_t override
}

interface IRawDataProvider
{
    +GetRawData(): uint32_t
}

class AdcDmaDataProvider
{
    -adcCounts: uint32_t
    +GetRawData(): uint32_t override
}

interface IVoltage
{
    +Measure(): float
}

class Voltage
{
    -gain: const float
    -offset: const float
    +Measure(): float override
}

interface IUsart
{
    +SendMessage(message: string): void
}

class Usart
{
    +SendMessage(message: string): vold override
}

interface IDataRepositoryUpdater
{
    +UpdateValue(value: float): float
    +UpdateFilteredValue(filteredValue: float): float
}

interface IDataRepositoryProvider
{
    +GetValue(): float
    +GetFilteredValue(): float
}

class DataRepository
{
    -mVoltage: float
    -mFilteredVoltage: float
    +UpdateValue(value: float): float override
    +UpdateFilteredValue(filteredValue: float): float override
    +GetValue(): float override
    +GetFilteredValue(): float override
}

interface IFormatter
{
    +FormatString(value: float): string
}

class Formatter
{
    +FormatString(value: float): string
}

AdcDmaDataProvider --|> IRawDataProvider
IRawDataProvider --o Voltage
Voltage -|> IVoltage
IVoltage --o MeasurementTask

DigitalFilter --|> IDigitalFilter
IDigitalFilter --o MeasurementTask

LedCalculator --|> ILedCalculator
ILedCalculator --o MeasurementTask
LedController --|> ILedController
ILedController --o MeasurementTask

Usart --|> IUsart
IUsart --o UsartTask
Formatter --|> IFormatter
IFormatter --o UsartTask
IDataRepositoryProvider --o UsartTask


DataRepository --|> IDataRepositoryProvider
DataRepository --|> IDataRepositoryUpdater
IDataRepositoryUpdater --o MeasurementTask

MeasurementTask --|> IThread
UsartTask --|> IThread

@enduml
----